<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tidal</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tidal"/>
    <string name="prediction"/>
    <string name="time"/>
    <string name="location"/>
    <string name="intro_title"/>

</resources>